@@ -5,6 +5,7 @@
   qtvirtualkeyboard, qtwebchannel.
 * Add new packages: aspell, libidn, libxss, qca, sqlite, x11proto-scrnsaver,
   tidy-html5, libotr, attr, mxml.
+* Enable build of SQLite SQL plugin for Qt5.
 * Update in all configs:
   - GCC_EXTRA_VER from 6.3.0 to 7.1.0
   - FFMPEG_VER from 3.2.1 to 3.3.2
